cluster/apps/media/screendeck/networkpolicies/envoy-gateway-egress-screendeck.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: envoy-gateway-egress-screendeck
  namespace: network
spec:
  description: "Policy for envoy-gateway-egress-screendeck"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: envoy
      app.kubernetes.io/component: proxy
      app.kubernetes.io/managed-by: envoy-gateway
      gateway.envoyproxy.io/owning-gateway-namespace: network
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: screendeck
            "k8s:io.kubernetes.pod.namespace": media
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
