cluster/apps/media/screendeck/networkpolicies/screendeck.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: screendeck
  namespace: media
spec:
  description: "Policy for screendeck"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: screendeck
  ingress:
    - fromEndpoints:
        - matchLabels:
            gateway.envoyproxy.io/owning-gateway-name: envoy-internal
            gateway.envoyproxy.io/owning-gateway-namespace: network
            "k8s:io.kubernetes.pod.namespace": network
        - matchLabels:
            gateway.envoyproxy.io/owning-gateway-name: envoy-external
            gateway.envoyproxy.io/owning-gateway-namespace: network
            "k8s:io.kubernetes.pod.namespace": network
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: plex
            "k8s:io.kubernetes.pod.namespace": media
      toPorts:
        - ports:
            - port: "32400"
              protocol: TCP
    - toFQDNs:
        - matchName: clients.plex.tv
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
